Replace TConnection with TClientImpl in JDBC
Replace obsolete TarantoolConnection with TarantoolClient to have an
ability to perform async operations.

Update SQLDriver URL parameters. Add init and operation timeouts.
Remove socket timeout and replace socket provider with socket channel
provider options (according to TarantoolConnection-to-TarantoolClient
transfer written above).

Add operation timeout capability to TarantoolClientImpl. It also affects
the cluster client which no more needs its own expirable operations.

Add basic support for SQLStatement (setQueryTimeout) to execute requests
with timeout using new TarantoolClient operation timeout.

Remove deprecated JDBCBridge. SQLConnection accepted the responsibility
for producing raw SQL results.

Update README doc with respect to JDBC driver options changes.

Closes: #163
Follows on: #75, #155